--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "dev",
-  "packageManager": "yarn@3.1.1",
   "private": true,
   "workspaces": [
     "apps/*",
@@ -8,5 +7,19 @@
     "services/*",
     "support/*",
     "tools/*"
-  ]
+  ],
+  "scripts": {
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
+  },
+  "packageManager": "yarn@3.1.1",
+  "devDependencies": {
+    "@types/node": "^17.0.13",
+    "gts": "^3.1.0",
+    "typescript": "^4.0.3"
+  }
 }
