--- a/packages/notion/package.json
+++ b/packages/notion/package.json
@@ -27,8 +27,9 @@
     "@notionhq/client": "^0.4.13"
   },
   "devDependencies": {
-    "@types/node": "17",
+    "@dev/defaults": "workspace:^",
+    "@types/node": "^17.0.13",
     "gts": "^3.1.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.5.5"
   }
 }
