refactor: let's call it @dev/preset

--- a/packages/notion/tsconfig.json
+++ b/packages/notion/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@dev/defaults/tsconfig.json",
+  "extends": "@dev/preset/tsconfig.json",
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "build"
