--- a/packages/preset/tsconfig.json
+++ b/packages/preset/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "display": "@dev/defaults",
+  "display": "@dev/preset",
   "extends": "./node_modules/gts/tsconfig-google.json",
   "compilerOptions": {
     "rootDir": ".",
