--- a/packages/layer/package.json
+++ b/packages/layer/package.json
@@ -23,15 +23,19 @@
     "url": "https://github.com/pattrnbuffer/dev/issues"
   },
   "homepage": "https://github.com/pattrnbuffer/dev#readme",
+  "dependencies": {
+    "react": "^17.0.2"
+  },
   "devDependencies": {
     "@dev/preset": "workspace:^",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.13",
+    "@types/prettier": "^2.4.3",
     "@types/react": "^17.0.38",
     "gts": "^3.1.0",
     "jest": "^27.4.7",
+    "jest-circus": "^27.4.6",
+    "jest-watch-typeahead": "^1.0.0",
     "typescript": "^4.5.5"
-  },
-  "dependencies": {
-    "react": "^17.0.2"
   }
 }
