chore: update @dev/preset

--- a/packages/layer/tsconfig.json
+++ b/packages/layer/tsconfig.json
@@ -2,10 +2,6 @@
   "extends": "@dev/preset/tsconfig.json",
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "build"
-  },
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
-  ]
+    "outDir": "build",
+  }
 }
