--- a/packages/notion/tsconfig.json
+++ b/packages/notion/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "extends": "@dev/preset/tsconfig.json",
   "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "build"
-  },
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
-  ]
+    "outDir": "build",
+    "rootDir": "."
+  }
 }
