--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "posttest": "npm run lint"
   },
   "devDependencies": {
-    "@types/node": "^17.0.13",
+    "@types/node": "^17.0.15",
     "gts": "^3.1.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@dev/preset": "workspace:^"
   }
 }
