--- a/packages/notion/package.json
+++ b/packages/notion/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notion",
+  "name": "@dev/notion",
   "version": "1.0.0",
   "description": "a notion client",
   "main": "src/index.ts",
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@dev/preset": "workspace:^",
-    "@types/node": "^17.0.13",
+    "@types/node": "^17.0.15",
     "gts": "^3.1.0",
     "jest": "^27.4.7",
     "typescript": "^4.5.5"
