--- a/apps/huerto/package.json
+++ b/apps/huerto/package.json
@@ -1,23 +1,44 @@
 {
   "name": "huerto",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:all": "yarn lint && yarn type-check && yarn test",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@chakra-ui/react": "^1.8.3",
+    "@emotion/react": "11",
+    "@emotion/styled": "11",
+    "framer-motion": "5",
+    "ky": "^0.28.7",
+    "next": "12.0.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.18",
-    "@types/react": "17.0.39",
-    "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.5.5"
+    "@dev/preset": "workspace:^",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.10",
+    "eslint-plugin-testing-library": "^5.0.5",
+    "jest": "^27.5.1",
+    "jest-watch-typeahead": "^1.0.0",
+    "msw": "^0.38.1",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5"
   }
 }
