--- a/apps/huerto/package.json
+++ b/apps/huerto/package.json
@@ -9,27 +9,34 @@
     "lint": "next lint",
     "test": "jest",
     "test:all": "yarn lint && yarn type-check && yarn test",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "build:bin": "tsc -- bin",
+    "bootstrap": "ts-node ./bin/setup.ts"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.3",
+    "@dev/node-hue-api": "workspace:^",
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "framer-motion": "5",
     "ky": "^0.28.7",
     "next": "12.0.10",
+    "node-hue-api": "^5.0.0-beta.13",
+    "prompts": "^2.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "swr": "^1.2.1"
   },
   "devDependencies": {
     "@dev/preset": "workspace:^",
+    "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.18",
+    "@types/prompts": "^2.0.14",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "eslint": "8.8.0",
@@ -39,6 +46,7 @@
     "jest-watch-typeahead": "^1.0.0",
     "msw": "^0.38.1",
     "prettier": "^2.5.1",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
 }
