--- a/apps/huerto/bin/tsconfig.json
+++ b/apps/huerto/bin/tsconfig.json
@@ -4,7 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "module": "CommonJS",
     "skipLibCheck": true,
-    "outDir": "./",
-    "noEmit": false
-  },
+    "noEmit": false,
+    "outDir": "./dist"
+  }
 }
