--- a/apps/huerto/package.json
+++ b/apps/huerto/package.json
@@ -18,14 +18,20 @@
     "@dev/node-hue-api": "workspace:^",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "cie-rgb-color-converter": "^1.0.6",
+    "color-space": "^2.0.0",
+    "find-root": "^1.1.0",
     "framer-motion": "5",
+    "got": "11",
     "ky": "^0.28.7",
+    "luxon": "^2.3.0",
     "next": "12.0.10",
     "node-hue-api": "^5.0.0-beta.13",
     "prompts": "^2.4.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "swr": "^1.2.1"
+    "swr": "^1.2.1",
+    "xy": "^0.0.0"
   },
   "devDependencies": {
     "@dev/preset": "workspace:^",
@@ -34,7 +40,9 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/find-root": "^1.1.2",
     "@types/jest": "^27.4.0",
+    "@types/luxon": "^2.0.9",
     "@types/node": "^17.0.18",
     "@types/prompts": "^2.0.14",
     "@types/react": "^17.0.39",
