--- a/packages/preset/tsconfig.json
+++ b/packages/preset/tsconfig.json
@@ -6,6 +6,9 @@
     "lib": [
       "es2021"
     ],
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
   }
 }
