--- a/apps/daily/package.json
+++ b/apps/daily/package.json
@@ -9,27 +9,52 @@
     "lint": "next lint",
     "test": "jest",
     "test:all": "yarn lint && yarn type-check && yarn test",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "build:bin": "tsc -- bin",
+    "bootstrap": "ts-node ./bin/setup.ts"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.3",
+    "@dev/node-hue-api": "workspace:^",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "cie-rgb-color-converter": "^1.0.6",
+    "color-space": "^2.0.0",
+    "convert-units": "^2.3.4",
+    "find-root": "^1.1.0",
     "framer-motion": "5",
+    "got": "11",
+    "js-quantities": "^1.7.6",
     "ky": "^0.28.7",
+    "luxon": "^2.3.1",
+    "mathjs": "^10.4.0",
     "next": "12.0.10",
+    "node-hue-api": "^5.0.0-beta.13",
+    "prompts": "^2.4.2",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "swr": "^1.2.1"
+    "swr": "^1.2.1",
+    "xy": "^0.0.0",
+    "yaml": "^1.10.2"
   },
   "devDependencies": {
     "@dev/preset": "workspace:^",
+    "@dev/prompts": "workspace:^",
+    "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/convert-units": "^2.3.5",
+    "@types/find-root": "^1.1.2",
     "@types/jest": "^27.4.0",
+    "@types/js-quantities": "^1.6.3",
+    "@types/luxon": "^2.3.0",
+    "@types/mathjs": "^9.4.2",
     "@types/node": "^17.0.18",
+    "@types/prompts": "^2.0.14",
+    "@types/ramda": "^0.28.1",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "eslint": "8.8.0",
@@ -39,6 +64,8 @@
     "jest-watch-typeahead": "^1.0.0",
     "msw": "^0.38.1",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.5"
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5",
+    "zx": "^4.0.0"
   }
 }
