--- a/apps/daily/tsconfig.json
+++ b/apps/daily/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2021",
+    "target": "ES2021",
     "lib": [
       "dom",
       "dom.iterable",
@@ -22,15 +22,20 @@
     "paths": {
       "~/*": [
         "./*"
-      ]
+      ],
     }
   },
   "include": [
+    "../../packages/**/*.ts",
+    "../../packages/**/*.tsx",
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "ts-node": {
+    "swc": true
+  }
 }
