--- a/apps/huerto/package.json
+++ b/apps/huerto/package.json
@@ -24,7 +24,7 @@
     "framer-motion": "5",
     "got": "11",
     "ky": "^0.28.7",
-    "luxon": "^2.3.0",
+    "luxon": "^2.3.1",
     "next": "12.0.10",
     "node-hue-api": "^5.0.0-beta.13",
     "prompts": "^2.4.2",
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@dev/preset": "workspace:^",
+    "@dev/prompts": "workspace:^",
     "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -42,7 +43,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/find-root": "^1.1.2",
     "@types/jest": "^27.4.0",
-    "@types/luxon": "^2.0.9",
+    "@types/luxon": "^2.3.0",
     "@types/node": "^17.0.18",
     "@types/prompts": "^2.0.14",
     "@types/react": "^17.0.39",
@@ -55,6 +56,7 @@
     "msw": "^0.38.1",
     "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "zx": "^4.0.0"
   }
 }
