--- a/apps/regimen/package.json
+++ b/apps/regimen/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.3",
+    "@dev/tools": "workspace:^",
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "framer-motion": "5",
     "ky": "^0.28.7",
     "next": "12.0.10",
+    "prompts": "^2.4.2",
     "react": "^18.0.0-rc.0",
     "react-dom": "^18.0.0-rc.0",
     "swr": "^1.2.1",
@@ -24,18 +26,34 @@
   },
   "devDependencies": {
     "@dev/preset": "workspace:^",
+    "@dev/prompts": "workspace:^",
+    "@swc/core": "^1.2.146",
+    "@swc/helpers": "^0.3.6",
+    "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.2",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.15",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/find-root": "^1.1.2",
+    "@types/jest": "^27.4.1",
+    "@types/luxon": "^2.0.9",
+    "@types/node": "^17.0.21",
+    "@types/prompts": "^2.0.14",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "babel-jest": "^27.5.0",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
-    "jest": "^27.5.0",
+    "cli-spinners": "^2.6.1",
+    "eslint": "^8.10.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-plugin-testing-library": "^5.0.5",
+    "jest": "^27.5.1",
     "jest-watch-typeahead": "^1.0.0",
-    "msw": "^0.36.8",
-    "typescript": "4.5.5"
+    "msw": "^0.38.1",
+    "ora": "^5.4.1",
+    "prettier": "^2.5.1",
+    "regenerator-runtime": "^0.13.9",
+    "ts-node": "^10.5.0",
+    "tsconfig-paths": "^3.12.0",
+    "typescript": "^4.5.5"
   }
 }
