--- a/apps/regimen/tsconfig.json
+++ b/apps/regimen/tsconfig.json
@@ -4,7 +4,7 @@
       "react/next",
       "react-dom/next",
     ],
-    "target": "es5",
+    "target": "es6",
     "lib": [
       "dom",
       "dom.iterable",
@@ -16,7 +16,7 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -36,5 +36,11 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "ts-node": {
+    "swc": true,
+    "require": [
+      "tsconfig-paths/register",
+    ],
+  }
 }
