--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -2,8 +2,10 @@
   "name": "@dev/hooks",
   "version": "1.0.0",
   "description": "The definitive collection of idiomatic hooks 👀",
-  "main": "src/index.ts",
+  "main": "build/index.js",
+  "types": "./build/index.d.ts",
   "scripts": {
+    "build": "rm -rf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/pattrnbuffer/dev/issues"
   },
-  "homepage": "https://github.com/pattrnbuffer/dev#readme"
+  "homepage": "https://github.com/pattrnbuffer/dev#readme",
+  "devDependencies": {
+    "@dev/preset": "workspace:^",
+    "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "@dev/tools": "workspace:^"
+  }
 }
