feat(huerto): add all-lights api and frontend

--- a/apps/huerto/package.json
+++ b/apps/huerto/package.json
@@ -15,11 +15,15 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.3",
+    "@dev/hooks": "workspace:^",
     "@dev/node-hue-api": "workspace:^",
+    "@dev/tools": "workspace:^",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@evanrs/fetch": "^0.2.0",
     "cie-rgb-color-converter": "^1.0.6",
     "color-space": "^2.0.0",
+    "colormap": "^2.3.2",
     "find-root": "^1.1.0",
     "framer-motion": "5",
     "got": "11",
