--- a/packages/prompts/package.json
+++ b/packages/prompts/package.json
@@ -2,8 +2,10 @@
   "name": "@dev/prompts",
   "version": "1.0.0",
   "description": "A toolbox built on prompts.",
-  "main": "index.ts",
+  "main": "build/index.js",
+  "types": "./build/index.d.ts",
   "scripts": {
+    "build": "rm -rf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
