feat(typescript): add configure command

--- a/packages/typestrict/package.json
+++ b/packages/typestrict/package.json
@@ -8,7 +8,8 @@
   "type": "module",
   "bin": {
     "typestrict": "./bin/typestrict.mjs",
-    "typestrict-check": "./bin/check.mjs"
+    "typestrict-check": "./bin/check.mjs",
+    "typestrict-configure": "./bin/configure.mjs"
   },
   "repository": {
     "type": "git",
