--- a/apps/huerto/package.json
+++ b/apps/huerto/package.json
@@ -27,6 +27,8 @@
     "find-root": "^1.1.0",
     "framer-motion": "5",
     "got": "11",
+    "immer": "^9.0.15",
+    "jotai": "^1.7.8",
     "ky": "^0.28.7",
     "luxon": "^2.3.1",
     "next": "12.0.10",
