feat(huerto): add mouse position atom

--- a/apps/huerto/package.json
+++ b/apps/huerto/package.json
@@ -18,8 +18,8 @@
     "@dev/hooks": "workspace:^",
     "@dev/node-hue-api": "workspace:^",
     "@dev/tools": "workspace:^",
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@evanrs/fetch": "^0.2.0",
     "cie-rgb-color-converter": "^1.0.6",
     "color-space": "^2.0.0",
