--- a/apps/huerto/package.json
+++ b/apps/huerto/package.json
@@ -21,6 +21,9 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@evanrs/fetch": "^0.2.0",
+    "@react-three/drei": "^9.22.7",
+    "@react-three/fiber": "^8.3.1",
+    "@swc/helpers": "^0.4.6",
     "cie-rgb-color-converter": "^1.0.6",
     "color-space": "^2.0.0",
     "colormap": "^2.3.2",
@@ -31,12 +34,13 @@
     "jotai": "^1.7.8",
     "ky": "^0.28.7",
     "luxon": "^2.3.1",
-    "next": "12.0.10",
+    "next": "12.2.0",
     "node-hue-api": "^5.0.0-beta.13",
     "prompts": "^2.4.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "swr": "^1.2.1",
+    "three": "^0.143.0",
     "xy": "^0.0.0"
   },
   "devDependencies": {
@@ -52,8 +56,8 @@
     "@types/luxon": "^2.3.0",
     "@types/node": "^17.0.18",
     "@types/prompts": "^2.0.14",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "eslint-plugin-testing-library": "^5.0.5",
