--- a/apps/daily/package.json
+++ b/apps/daily/package.json
@@ -18,6 +18,7 @@
     "@dev/node-hue-api": "workspace:^",
     "@emotion/react": "11",
     "@emotion/styled": "11",
+    "@fontsource/poppins": "^4.5.9",
     "cie-rgb-color-converter": "^1.0.6",
     "color-space": "^2.0.0",
     "convert-units": "^2.3.4",
@@ -34,6 +35,7 @@
     "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "ress": "^5.0.2",
     "swr": "^1.2.1",
     "xy": "^0.0.0",
     "yaml": "^1.10.2"
