--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,7 +34,8 @@
     "titleBar.activeBackground": "#f1b026",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#f1b02699",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "commandCenter.border": "#15202b99"
   },
   "peacock.color": "#f1b026",
 }
