--- a/apps/daily/.vscode/settings.json
+++ b/apps/daily/.vscode/settings.json
@@ -16,7 +16,8 @@
     "titleBar.activeBackground": "#bfbbb9",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#bfbbb999",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "commandCenter.border": "#15202b99"
   },
   "peacock.color": "#bfbbb9"
 }
