--- a/apps/huerto/.vscode/settings.json
+++ b/apps/huerto/.vscode/settings.json
@@ -16,7 +16,8 @@
     "titleBar.activeBackground": "#e3aa5d",
     "titleBar.activeForeground": "#15202b",
     "titleBar.inactiveBackground": "#e3aa5d99",
-    "titleBar.inactiveForeground": "#15202b99"
+    "titleBar.inactiveForeground": "#15202b99",
+    "commandCenter.border": "#15202b99"
   },
   "peacock.color": "#e3aa5d"
 }
