--- a/apps/huerto/package.json
+++ b/apps/huerto/package.json
@@ -34,7 +34,7 @@
     "jotai": "^1.7.8",
     "ky": "^0.28.7",
     "luxon": "^2.3.1",
-    "next": "12.2.0",
+    "next": "12",
     "node-hue-api": "^5.0.0-beta.13",
     "prompts": "^2.4.2",
     "react": "^18.2.0",
@@ -58,6 +58,7 @@
     "@types/prompts": "^2.0.14",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/three": "^0.143.1",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "eslint-plugin-testing-library": "^5.0.5",
