--- a/packages/stator/tsconfig.json
+++ b/packages/stator/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "build",
     "rootDir": ".",
     "lib": ["DOM"],
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["bun-types"]
   },
   "exclude": ["build"]
 }
