--- a/apps/regimen/package.json
+++ b/apps/regimen/package.json
@@ -11,8 +11,8 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@bffr/tools": "workspace:^",
     "@chakra-ui/react": "^1.8.3",
-    "@dev/tools": "workspace:^",
     "@emotion/react": "11",
     "@emotion/styled": "11",
     "framer-motion": "5",
@@ -25,8 +25,8 @@
     "ts-jest": "^27.1.3"
   },
   "devDependencies": {
-    "@dev/preset": "workspace:^",
-    "@dev/prompts": "workspace:^",
+    "@bffr/preset": "workspace:^",
+    "@bffr/prompts": "workspace:^",
     "@swc/core": "^1.2.146",
     "@swc/helpers": "^0.3.6",
     "@testing-library/dom": "^8.11.3",
