--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@dev/preset": "workspace:^"
+    "@bffr/preset": "workspace:^"
   },
   "volta": {
     "node": "16.16.0"
