--- a/packages/node-hude-api/package.json
+++ b/packages/node-hude-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dev/node-hue-api",
+  "name": "@bffr/node-hue-api",
   "description": "Philips Hue API Library for Node.js",
   "version": "5.0.0-beta.12",
   "author": "Peter Murray ",
