--- a/packages/preset/package.json
+++ b/packages/preset/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dev/preset",
+  "name": "@bffr/preset",
   "packageManager": "yarn@3.1.1",
   "version": "1.0.0",
   "dependencies": {
