--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dev/tools",
+  "name": "@bffr/tools",
   "version": "1.0.0",
   "description": "Hammers, saws, and more pure function tools.",
   "main": "build/index.js",
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/pattrnbuffer/dev#readme",
   "devDependencies": {
-    "@dev/preset": "workspace:^",
+    "@bffr/preset": "workspace:^",
     "typescript": "^4.6.2"
   },
   "dependencies": {
