--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -2,10 +2,10 @@
   "name": "@bffr/tools",
   "version": "1.0.0",
   "description": "Hammers, saws, and more pure function tools.",
-  "main": "build/index.js",
-  "types": "./build/index.d.ts",
+  "main": "dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf ./build && tsc",
+    "build": "rm -rf ./dist && tsc -b",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
