--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,6 @@
 nodeLinker: node-modules
+nmHoistingLimits: dependencies
+nmMode: hardlinks-local
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
