--- a/packages/hooks/.vscode/settings.json
+++ b/packages/hooks/.vscode/settings.json
@@ -16,7 +16,8 @@
     "titleBar.activeBackground": "#1244d3",
     "titleBar.activeForeground": "#e7e7e7",
     "titleBar.inactiveBackground": "#1244d399",
-    "titleBar.inactiveForeground": "#e7e7e799"
+    "titleBar.inactiveForeground": "#e7e7e799",
+    "commandCenter.border": "#e7e7e799"
   },
   "peacock.color": "#1244d3"
 }
