--- a/packages/layer/tsconfig.json
+++ b/packages/layer/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "@bffr/preset/tsconfig.json",
   "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "build",
-  }
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "outDir": "dist",
+    "rootDir": "src"
+  },
+  "exclude": ["dist"]
 }
