--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "@bffr/preset/tsconfig.json",
   "compilerOptions": {
+    "moduleResolution":"node",
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "dist",
-    "rootDir": ".",
+    "rootDir": "src",
     "lib": ["DOM"],
     "jsx": "react-jsx"
   },
