--- a/packages/tools/tsconfig.json
+++ b/packages/tools/tsconfig.json
@@ -4,7 +4,7 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "dist",
-    "rootDir": "."
+    "rootDir": "src"
   },
   "exclude": ["dist"]
 }
