chore: exclude *.test.* from build

--- a/packages/hooks-web/tsconfig.json
+++ b/packages/hooks-web/tsconfig.json
@@ -8,5 +8,6 @@
     "lib": ["DOM"],
     "jsx": "react-jsx"
   },
-  "exclude": ["dist"]
+  "include": ["src/**/*"],
+  "exclude": ["**/*.test.*"]
 }
