--- a/packages/hooks/tsconfig.json
+++ b/packages/hooks/tsconfig.json
@@ -9,5 +9,6 @@
     "lib": ["DOM"],
     "jsx": "react-jsx"
   },
-  "exclude": ["dist"]
+  "include": ["src/**/*"],
+  "exclude": ["**/*.test.*"]
 }
