--- a/packages/stator/tsconfig.json
+++ b/packages/stator/tsconfig.json
@@ -9,5 +9,6 @@
     "jsx": "react-jsx",
     "types": ["bun-types"]
   },
-  "exclude": ["dist"]
+  "include": ["src/**/*"],
+  "exclude": ["**/*.test.*"]
 }
