--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -6,6 +6,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rm -rf ./dist && tsc -b",
+    "publish": "yarn build && npm publish --access public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
