--- a/packages/stator/package.json
+++ b/packages/stator/package.json
@@ -6,7 +6,8 @@
   "types": "./build/index.d.ts",
   "scripts": {
     "build": "rm -rf ./build && tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "bun wiptest --cwd ./src/",
+    "test:watch": "yarn watch 'bun wiptest --cwd ./src' ./src  "
   },
   "repository": {
     "type": "git",
@@ -21,11 +22,12 @@
   "devDependencies": {
     "@bffr/preset": "portal:../preset/",
     "bun-types": "^0.2.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "watch": "^1.0.2"
   },
   "dependencies": {
-    "@bffr/hooks": "portal:../hooks/",
-    "@bffr/tools": "portal:../tools/",
+    "@bffr/hooks": "workspace:*",
+    "@bffr/tools": "workspace:*",
     "@evanrs/fetch": "^0.2.0",
     "@sindresorhus/is": "4.6.0",
     "@types/react": "^18.0.21",
