--- a/packages/preset/package.json
+++ b/packages/preset/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "gts": "^3.1.0",
     "jest": "^27.4.7",
-    "ts-jest": "^27.1.3"
+    "jest-watch-typeahead": "^2.2.0",
+    "ts-jest": "^29.0.3"
   },
   "devDependencies": {
     "@types/node": "^17.0.15",
