--- a/packages/stator/package.json
+++ b/packages/stator/package.json
@@ -20,17 +20,25 @@
   },
   "homepage": "https://github.com/pattrnbuffer/dev#readme",
   "devDependencies": {
-    "@bffr/preset": "portal:../preset/",
+    "@bffr/preset": "workspace:^",
+    "@jest/globals": "^29.2.1",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.0",
     "bun-types": "^0.2.0",
+    "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.2.1",
+    "react-dom": "^18.2.0",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
     "watch": "^1.0.2"
   },
   "dependencies": {
     "@bffr/hooks": "workspace:*",
-    "@bffr/tools": "workspace:*",
+    "@bffr/tools": "workspace:^",
     "@evanrs/fetch": "^0.2.0",
     "@sindresorhus/is": "4.6.0",
     "@types/react": "^18.0.21",
+    "jotai": "^1.8.5",
     "react": "^18.2.0"
   }
 }
