--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -1,9 +1,14 @@
 {
   "name": "@bffr/hooks",
-  "version": "0.0.0",
+  "version": "0.0.5",
   "description": "The definitive collection of idiomatic hooks 👀",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
+  "source": "./src/index.ts",
   "types": "./dist/index.d.ts",
+  "files": [
+    "./dist/*",
+    "./src/*"
+  ],
   "scripts": {
     "build": "rm -rf ./dist && tsc -b",
     "publish": "yarn build && npm publish --access public",
@@ -27,7 +32,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "@bffr/tools": "workspace:*",
+    "@bffr/tools": "^0.0.4",
     "@evanrs/fetch": "^0.2.0",
     "@sindresorhus/is": "4.6.0",
     "react": "^18.2.0"
