--- a/packages/prompts/package.json
+++ b/packages/prompts/package.json
@@ -1,11 +1,18 @@
 {
   "name": "@bffr/prompts",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "A toolbox built on prompts.",
-  "main": "build/index.js",
-  "types": "./build/index.d.ts",
+  "main": "./dist/index.js",
+  "source": "./src/index.ts",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "./dist/*",
+    "./src/*"
+  ],
   "scripts": {
-    "build": "rm -rf ./build && tsc",
+    "build": "rm -rf ./dist && tsc -b",
+    "prepublishOnly": "yarn build",
+    "publish": "npm publish --access public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,11 +25,14 @@
     "url": "https://github.com/pattrnbuffer/dev/issues"
   },
   "homepage": "https://github.com/pattrnbuffer/dev#readme",
-  "dependencies": {
+  "peerDependencies": {
+    "@types/prompts": "^2.4.2",
     "prompts": "^2.4.2"
   },
   "devDependencies": {
     "@bffr/preset": "workspace:^",
+    "@types/prompts": "^2.4.2",
+    "prompts": "^2.4.2",
     "typescript": "^4.6.2"
   }
 }
