feat(tools): add createIdleCallback

--- a/packages/tools/tsconfig.json
+++ b/packages/tools/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@bffr/preset/tsconfig.json",
   "compilerOptions": {
+    "lib": ["DOM"],
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "outDir": "dist",
